*SVN*

* Fix gemspec to include a dependency on rake 0.7 [Jamis Buck]

* Added respect for ENV["HOSTS"] that'll be used instead of the roles specified in the task definition [DHH]. Example:

    HOSTS=192.168.0.1 cap setup # one-off setup for that server, doesn't need to be prespecified in the recipes file

* Added respect for ENV["ROLES"] that'll be used instead of the roles specified in the task definition [DHH]. Example:

    task :setup, :roles => [ :app, :web, :db ]
      # normally this would run every where
    end
    
    ROLES=app cap setup # this will only run for the app role, overwritting the default declaration

* Added :hosts option to task definition that allows you to specify cross-cutting tasks [DHH]. Example:

    task :setup, :hosts => [ "06.example.com", "01.example.com" ] do
      # this task will happen on 06 and 01 regardless of which roles they belong to
    end

* Fix operator precedence problem in script for touching the revisions.log #3223 [jason.garber@emu.edu]


*1.1.0* (March 6th, 2006)

* Simplify the generated capistrano.rake file, and make it easier to customize

* Use rake-like command-line semantics ("cap deploy", in addition to "cap -a deploy")

* Rename to capistrano

* Make the generated capistrano.rake file use rake namespaces, and include all default tasks

* Look for config/deploy.rb, capfile, and Capfile by default


*1.0.1* (February 20th, 2006)

* Fix broken switchtower_invoke function in switchtower.rake (missing require statement)


*1.0.0* (Feburary 18th, 2006)

* Make CVS module's :local value default to "."

* Add "invoke" task for executing one-off commands

* Make port selection smarter for gateway connections

* Add extension mechanism for custom ST operations and third-party task libraries

* Make ST rails rake tasks more configurable

* Add Actor#current_task and simplify Task#servers

* Add Actor#connect! method for working around lazy connection establishing
