@@ -1,5 +1,7 @@
 *SVN*
 
+* Deprecate the -r/--recipe switch in favor of -f/--file (for more make/rake-like semantics) [Jamis Buck]
+
 * Fix gemspec to include a dependency on rake 0.7 [Jamis Buck]
 
 * Added respect for ENV["HOSTS"] that'll be used instead of the roles specified in the task definition [DHH]. Example:
